maze.lessons.maze.island.IslandMaze.scala.error
Escaper:13: error: value HORTH is not a member of object plm.universe.Direction
	if(getDirection==Direction.HORTH){avance()}
                                   ^Escaper:16: error: not found: value etat
etat match{
^Escaper:19: error: not found: value etat
				etat=1
                                ^Escaper:23: error: not found: value etat
				etat=0
                                ^