maze.lessons.maze.island.IslandMaze.scala.code
override def run() {
def keepHandOnSideWall(){
	gauche();
	if(estFaceMur){
		droite(); if(estFaceMur){
			droite(); if(estFaceMur){
				droite()}else{avance}
			}else{avance}
		}else{avance}
	}
def trouveNord(){
	if(getDirection==Direction.HORTH){avance()}
}
while(estSurBiscuit==false){
etat match{
	case 0 => trouveNord()
			if(estFaceMur()==true && getDirection()==Direction.NORTH){
				etat=1
			}
	case 1 => keepHandOnSideWall()
			if(getDirection()==Direction.NORTH){
				etat=0
			}
}
}
}


